# sports-data-admin-util

./: .coverage  .cursorrules  .gitignore  .secrets.baseline  AGENTS.md  AIDLC_FUTURES.md  ARCHITECTURE.md  BRAINDUMP.md  CHANGELOG.md  CLAUDE.md  CLEANUP_AND_REFACTORING_SUMMARY.md  DEPLOYMENT_SETUP.md  DESIGN.md  README.md  ROADMAP.md  _check_migrations.py  _prod_schema.sql  club-claims-endpoint-plan.md  docker-compose.prod.yml  package.json  pnpm-workspace.yaml
api/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  verify_tests.py
api/alembic/: env.py
api/alembic/versions/: 20250920_000001_initial_schema.py  20260101_000002_fix_social_media_type.py  20260101_000003_add_social_updated_at.py  20260101_000004_add_plays_updated_at_and_backfill.py  20260101_000005_add_compact_mode_thresholds.py  20260101_000006_add_game_reading_positions.py  20260108_000001_beta_phase0_canonical_schema.py  20260109_000001_fix_odds_upsert_constraints.py  20260110_000002_merge_heads.py  20260115_000001_beta_phase3_social_layer.py  20260115_000002_beta_phase3_reveal_reason.py  20260115_000003_add_tip_time_column.py  20260115_000004_seed_nba_social_handles.py  20260120_000001_beta_phase5_monitoring.py  20260122_000001_add_game_stories_table.py  20260124_000001_drop_season_stats_tables.py  20260125_000001_fix_source_game_key_per_league.py  20260126_000001_drop_legacy_story_columns.py  20260127_000001_add_moments_to_game_stories.py  20260127_000002_add_bulk_story_jobs_table.py  20260127_000003_add_openai_response_cache.py  20260127_add_sports_players.py  20260127_merge_heads.py  20260128_000001_populate_ncaab_cbb_team_ids.py  20260129_000001_fix_ncaab_cbb_team_ids.py  20260130_000001_repopulate_ncaab_cbb_team_ids.py  20260130_000002_add_missing_ncaab_team_mappings.py  20260130_000003_seed_ncaab_teams.py  20260131_000001_add_fairbet_game_odds_work.py  20260131_000002_add_max_games_to_bulk_jobs.py  20260203_000003_add_story_blocks.py  20260205_000001_seed_nhl_social_handles.py  20260205_000002_create_team_social_posts.py  20260206_000002_add_game_phase_to_team_social_posts.py  20260206_000003_add_social_scrape_tracking.py  20260208_000001_seed_ncaab_social_handles.py  20260210_000001_add_season_stats_tables.py  20260210_000002_add_game_timeline_artifacts.py  20260210_000003_add_game_analysis_json.py  20260211_000001_fix_ncaab_abbreviations.py  (+74 more)
api/app/: celery_app.py  celery_client.py  config.py  config_sports.py  context.py  db.py  db_models.py  logging_config.py  metrics.py  otel.py  security.py  validate_env.py
api/app/analytics/: __init__.py
api/app/db/: __init__.py  analytics.py  cache.py  club_membership.py  config.py  external_id_validators.py  flow.py  golf.py  golf_pools.py  hooks.py  jsonb_registry.py  jsonb_validators.py  mlb_advanced.py  mlb_forecast.py  nba_advanced.py  ncaab_advanced.py  nfl_advanced.py  nhl_advanced.py  odds.py  onboarding.py  pipeline.py  quality_review.py  resolution.py  scraper.py  social.py  sports.py  story.py  telemetry.py  user_preferences.py  users.py
api/app/dependencies/: __init__.py  auth.py  consumer_auth.py  roles.py  score_preferences.py
api/app/game_metadata/: __init__.py  mock_ratings.json  mock_standings.json  models.py  nuggets.py  routes.py  scoring.py  services.py
api/app/middleware/: logging.py  rate_limit.py  security_headers.py
api/app/realtime/: listener.py  manager.py  models.py  poller.py  sse.py  streams.py  ws.py
api/app/routers/: __init__.py  auth.py  billing.py  club_branding.py  club_memberships.py  clubs.py  commerce.py  game_snapshot_models.py  game_snapshots.py  model_odds.py  social.py  (+7 more)
api/scripts/: backfill_timelines.py  generate_timeline.py  seed_admin_user.py
api/tests/: conftest.py  test_ai_context.py  test_ai_signals.py  test_ai_summary.py  test_alert_rules.py  test_analytics.py  test_analytics_routes_calibration.py  test_analytics_routes_features.py  test_analytics_routes_models.py  test_analytics_routes_pipeline.py  test_analytics_routes_simulation.py  test_analytics_routes_teams.py  test_analyze_drama.py  test_api_key_scopes.py  test_artifact_signing.py  test_audit_log.py  test_auth.py  test_auth_rate_limit.py  test_batted_ball_dataset.py  test_beat_classifier.py  test_boundary_detection.py  test_boundary_rules.py  test_cache_helpers.py  test_camelcase_lint.py  test_chapter_schemas.py  test_chapterizer.py  test_chapters.py  test_circuit_breaker_registry.py  test_circuit_breakers_endpoint.py  test_club_branding.py  test_club_memberships.py  test_clubs_public.py  test_commerce_checkout.py  test_compact_mode_thresholds.py  test_compact_moments_endpoint.py  test_compact_posts_endpoint.py  test_compact_story_generator.py  test_consensus_lineup.py  test_consumer_auth.py  test_content_decision.py  (+151 more)
scraper/: .coverage  pyproject.toml
scraper/bets_scraper/: celery_app.py  config.py  config_sports.py  logging.py  validate_env.py
scraper/scripts/: audit_data.py  cleanup_duplicate_teams.py  fix_team_abbreviations.py  validate_nhl_x_handles.py
scraper/sports_scraper/: __init__.py  api_client.py  celery_app.py  config.py  config_sports.py  db.py  logging.py  telemetry.py  validate_env.py
scraper/tests/: conftest.py  test_active_games.py  test_bluesky_collector.py  test_boxscore_caching.py  test_boxscore_ingestion.py  test_boxscore_live_coverage.py  test_config_sports.py  test_db.py  test_db_queries.py  test_fairbet.py  test_final_whistle.py  test_flow_backfill.py  test_flow_immutability.py  test_flow_sweep.py  test_flow_trigger_lock.py  test_game_processors.py  test_game_state_updater.py  test_golden_corpus.py  test_golf.py  test_golf_pools.py  test_grade_gate.py  test_grader.py  test_html_parsing.py  test_job_runs.py  test_live_feed_clients.py  test_live_feed_parsing.py  test_live_helpers.py  test_live_manager.py  test_live_nhl_pbp.py  test_live_odds.py  test_mlb_advanced_stats_ingestion.py  test_mlb_boxscore_ingestion.py  test_mlb_client.py  test_mlb_statcast.py  test_models.py  test_nba_advanced.py  test_nba_boxscore_ingestion.py  test_nba_bref.py  test_nba_historical_ingestion.py  test_ncaa_api.py  (+63 more)
(+1161 files in other folders)
