[project]
name = "sports-data-api"
version = "0.1.0"
description = "FastAPI backend for Sports Data Admin"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html:coverage_html",
  "--cov-fail-under=30",  # TODO: Increase to 80% as test coverage improves
]

[tool.coverage.run]
source = ["app"]
omit = [
  # Entry points
  "**/main.py",
  # Alembic migrations
  "**/alembic/**",
  # Init files (no logic)
  "**/__init__.py",
  # Database models (schema definitions)
  "**/db_models.py",
  # Database connection (requires running database)
  "**/db.py",
  # Configuration (environment-dependent)
  "**/config.py",
  "**/validate_env.py",
  # Routers (require integration tests)
  "**/routers/**",
  # Celery tasks (require broker)
  "**/tasks/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
