[project]
name = "sports-data-scraper"
version = "0.1.0"
description = "Sports data ingestion service for Scroll Down Sports."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "alembic>=1.13.0,<2.0.0",
  "httpx>=0.27.0,<0.29.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=5.3.0,<7.0.0",
  "structlog>=24.1.0,<26.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.0,<8.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "playwright>=1.47.0,<2.0.0",
]

[dependency-groups]
dev = [
  "black>=24.8.0,<27.0.0",
  "pytest>=8.3.2,<10.0.0",
  "ruff>=0.7.0,<0.16.0",
  "pytest-cov>=4.1.0,<8.0.0",
  "mypy>=1.11.0,<2.0.0",
  "types-beautifulsoup4>=4.12.0,<5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
  "--cov=sports_scraper",
  "--cov-report=term-missing",
  "--cov-report=html:coverage_html",
  "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["sports_scraper"]
omit = [
  # Celery infrastructure (requires running broker)
  "**/celery_app.py",
  "**/jobs/*",
  # Environment validation script (entry point)
  "**/validate_env.py",
  # Init files (no logic)
  "**/__init__.py",
  # Advanced stats fetchers (require external APIs: stats.nba.com, MoneyPuck, nflverse)
  "**/live/nba_advanced.py",
  "**/live/nhl_advanced.py",
  "**/live/nfl_advanced.py",
  "**/live/ncaab_advanced.py",
  # Advanced stats ingestion (require DB + external API data)
  "**/services/nba_advanced_stats_ingestion.py",
  "**/services/nhl_advanced_stats_ingestion.py",
  "**/services/nfl_advanced_stats_ingestion.py",
  "**/services/ncaab_advanced_stats_ingestion.py",
  # NFL live feed (requires ESPN API)
  "**/live/nfl.py",
  "**/live/nfl_pbp.py",
  "**/live/nfl_boxscore.py",
  "**/live/nfl_helpers.py",
  # Game processors (per-game DB + API calls; tested via integration)
  "**/services/game_processors.py",
  "**/services/game_processors_*.py",
  # LiveFeedManager (orchestrates live API calls across all leagues)
  "**/live/manager.py",
  # Database models namespace (import-only, requires running DB)
  "**/db.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402", "W293"]   # sys.path manipulation requires late imports
"tests/*" = ["E402", "F841"]     # env setup requires late imports; unused vars in assertions

[tool.ruff.lint.isort]
known-first-party = ["sports_scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sports_scraper"]

