[project]
name = "sports-data-scraper"
version = "0.1.0"
description = "Sports data ingestion service for Scroll Down Sports."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12.5,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy>=2.0.49,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "alembic>=1.13.0,<2.0.0",
  "httpx>=0.27.0,<0.29.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=6.1.0,<7.0.0",
  "structlog>=24.1.0,<26.0.0",
  "celery>=5.6.3,<6.0.0",
  "redis>=7.4.0,<8.0.0",
  "tenacity>=9.1.4,<10.0.0",
  "playwright>=1.58.0,<2.0.0",
  "nflreadpy>=0.1.5",
  # Transitive dep — pinned for CVE fix (ReDoS in AdlLexer/GUID matching)
  "pygments>=2.20.0",
  # OpenTelemetry — traces + metrics exported via OTLP gRPC
  "opentelemetry-sdk>=1.29.0,<2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29.0,<2.0.0",
  "opentelemetry-instrumentation-celery>=0.50b0,<1.0.0",
  "openai>=2.32.0",
]

[dependency-groups]
dev = [
  "black>=26.3.1,<27.0.0",
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.7.0,<0.16.0",
  "pytest-cov>=4.1.0,<8.0.0",
  "mypy>=1.20.0,<2.0.0",
  "types-beautifulsoup4>=4.12.0.20250516,<5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
  "--cov=sports_scraper",
  "--cov-report=term-missing",
  "--cov-report=html:coverage_html",
  "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["sports_scraper"]
omit = [
  # --- Truly untestable without infrastructure ---
  # Celery app config (requires running broker + Redis for beat schedule)
  "**/celery_app.py",
  # Celery task definitions (thin wrappers; tested via integration + ingestion service tests)
  "**/jobs/*",
  # Environment validation (entry-point script, not importable logic)
  "**/validate_env.py",
  # Init files (no logic)
  "**/__init__.py",
  # Database engine/session factory (requires live PostgreSQL connection)
  "**/db.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402", "W293"]   # sys.path manipulation requires late imports
"tests/*" = ["E402", "F841"]     # env setup requires late imports; unused vars in assertions

[tool.ruff.lint.isort]
known-first-party = ["sports_scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sports_scraper"]

